<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16ssp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/_16ssp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8ssp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:text="@string/logout_title"/>

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/gambarkeluar"
            android:layout_margin="@dimen/_4ssp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:text="@string/logout_desc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/no_btn"
                style="@style/TVBlackMedium3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="#E9E9E9"
                android:text="TIDAK" />

            <Button
                android:id="@+id/yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/logout"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>